# Wordbook

./: .deepsource.toml  .gitignore  .gitmodules  AUTHORS  CHANGELOG  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PACKAGING.md  README.md  ReoExplained  Wordbook.doap  deprecated  generate_wn_db.py  jishogen  justfile  mainwin.py  mainwin.ui  meson.build  meson_options.txt  pyproject.toml  reo  reo.py  reo.ui  reo_base.py  reo_qt.py  requirements_dev.txt  screo.pyx  setup.cfg  setup.py  ui_build.py  wn3.0  wn3.1
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/codeql/: codeql-config.yml
.github/workflows/: CI.yml  codeql.yml
.zed/: settings.json
build-aux/flatpak/: com.github.fushinari.Wordbook.Devel.json  com.github.fushinari.Wordbook.json  com.github.fushinari.Wordbook.yml  dev.mufeed.Wordbook.Devel.json  flatpak-pip-generator  flatpak-wheel-gen.py
data/: com.github.fushinari.Wordbook.appdata.xml  com.github.fushinari.Wordbook.desktop  com.github.fushinari.Wordbook.desktop.in  com.github.fushinari.Wordbook.desktop.in.in  com.github.fushinari.Wordbook.gresource.xml  com.github.fushinari.Wordbook.gschema.xml  com.github.fushinari.Wordbook.metainfo.xml.in  dev.mufeed.Wordbook.desktop.in.in  dev.mufeed.Wordbook.gschema.xml  dev.mufeed.Wordbook.gschema.xml.in  dev.mufeed.Wordbook.metainfo.xml.in  dev.mufeed.Wordbook.metainfo.xml.in.in  meson.build  search_provider.in
data/icons/: meson.build
data/resources/: meson.build  resources.gresource.xml  style.css
data/resources/ui/: menu.ui  settings-window.blp  settings_window.blp  settings_window.ui  shortcuts-dialog.blp  shortcuts_window.blp  shortcuts_window.ui  window.blp  window.ui
data/ui/: menu.xml  settings_window.ui  shortcuts_window.ui  window.ui
data/ui/css/: style.css
docs/: Makefile  authors.md  authors.rst  conf.py  contributing.md  history.md  history.rst  images  index.rst  installation.rst  license.md  make.bat  modules.rst  readme.md  reo.gtk.rst  reo.qt.rst  reo.rst  usage.rst
po/: LINGUAS  POTFILES  de.po  fa.po  fr.po  hi.po  hr.po  hu.po  it.po  kk.po  meson.build  nl.po  oc.po  ru.po  tr.po  vi.po  wordbook.pot  zh_CN.po
reo/: __init__.py  base.py  dict_base.py  reo_base.py  settings.py  utils.py
reo/data/: wn3.0.lzma  wn3.1.lzma
reo/gtk/: __init__.py  main.py  settings_window.py  window.py
reo/gtk/ui/: menu.xml  reo.ui  settings_window.ui  window.ui
reo/qt/: __init__.py  main_win.py  ui_mainwin.py
reo/qt/ui/: mainwin.ui  ui_build.py
scripts/: flatpak-wheel-gen.py  generate-wn-db.py
wordbook/: __init__.py  _download.py  base.py  constants.py  constants.py.in  database.py  main.py  meson.build  search_completion.py  settings.py  settings_window.py  utils.py  window.py  wordbook.in
wordbook/gtk/: __init__.py  main.py  settings_window.py  window.py
wordbook/gtk/ui/: menu.xml  window.ui
wordbook/qt/: __init__.py  main_win.py  ui_mainwin.py
wordbook/qt/ui/: mainwin.ui  ui_build.py
