[project]
name = "Wordbook"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "backports.zstd; python_version < '3.14'",
    "pydantic>=2.12.5",
    "rapidfuzz>=3.14.3",
    "wn",
]

[tool.uv]
package = false

[tool.setuptools]
packages = ["wordbook"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.format]
max-line-length = 120

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.pyright]
reportMissingModuleSource = "none"

[dependency-groups]
dev = [
    "pip>=25.3",
    "pygobject-stubs>=2.16.0",
    "ty>=0.0.8",
]

[tool.uv.sources]
wn = { path = "subprojects/wn", editable = true }
