[project]
name = "Wordbook"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "backports.zstd>=1.2.0; python_version < '3.14'",
    "pydantic>=2.12.5",
    "rapidfuzz>=3.14.3",
    "wn>=1.0.0",
]

[tool.uv]
package = false

[tool.setuptools]
packages = ["wordbook"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.format]
max-line-length = 120

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.pyright]
reportMissingModuleSource = "none"

[dependency-groups]
dev = [
    "pip>=26.0.1",
    "pygobject-stubs>=2.16.0",
    "ty>=0.0.17",
]

[tool.uv.sources]
wn = { path = "subprojects/wn", editable = true }
